--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="settings">Созламалар</string>
     <string name="color_theme">Дастур кўриниши</string>
     <string name="auto_night_mode">Aвтоматик тунги кўриниш</string>
+    <string name="themes">Мавзулар</string>
+    <string name="font_size">Матн ўлчами</string>
 </resources>
