--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Halqa</string>
     <string name="classic">Классик</string>
     <string name="night_mode">Тунги мавзу</string>
-    <string name="test_title">Lorem Ipsum</string>
+    <string name="test_title">Акром МАЛИК.</string>
     <string name="test_description">What is Lorem Ipsum?</string>
-    <string name="test_story">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
+    <string name="test_story">Бугун Сенинг висолинг дардларимга малҳам бўлмас, \nҲолим сўрсанг, саволинг дардларимга малҳам бўлмас.\nҚандоқ ширин бахт эди мен ҳақимда хаёл сурсанг –\nБугун энди хаёлинг дардларимга малҳам бўлмас.</string>
     <string name="home">Бош саҳифа</string>
     <string name="audio_book">Aудио китоб</string>
     <string name="settings">Созламалар</string>
