--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="font_size">Матн ўлчами</string>
     <string name="change_to_night_mode">Тунги режимга ўтиш</string>
     <string name="change_to_light_mode">Кундузги режимга ўтиш</string>
+    <string name="unknown_error">Номаълум хатолик</string>
 </resources>
