Fix actionbar title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Halqa</string>
+    <string name="app_name">Ҳалқа</string>
     <string name="classic">Классик</string>
     <string name="night_mode">Тунги мавзу</string>
     <string name="test_title">Акром МАЛИК.</string>
