--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="change_to_night_mode">Тунги режимга ўтиш</string>
     <string name="change_to_light_mode">Кундузги режимга ўтиш</string>
     <string name="unknown_error">Кутилмаган хато</string>
+    <string name="about_authors">Муаллиф ҳақида</string>
 </resources>
